v/0.2.0/_sources/examples/01_deterministic_workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/01_deterministic_workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_01_deterministic_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_01_deterministic_workflow.py:


Running Deterministic Inference
===============================

Basic deterministic inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
basic determinstic forecast using one of the built in models of Earth-2 Inference
Studio.

In this example you will learn:

- How to instantiate a built in prognostic model
- Creating a data source and IO object
- Running a simple built in workflow
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 37-42

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic:
:py:meth:`earth2studio.run.deterministic`.

.. GENERATED FROM PYTHON SOURCE LINES 44-48

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - deterministic start
   :end-before: # sphinx - deterministic end

.. GENERATED FROM PYTHON SOURCE LINES 50-55

Thus, we need the following:

- Prognostic Model: Use the built in FourCastNet Model :py:class:`earth2studio.models.px.FCN`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 57-78

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import FCN

    # Load the default model package which downloads the check point from NGC
    package = FCN.load_default_package()
    model = FCN.load_model(package)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    io = ZarrBackend()








.. GENERATED FROM PYTHON SOURCE LINES 79-88

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for two days (these will get executed as a batch) for
20 forecast steps which is 5 days.

.. GENERATED FROM PYTHON SOURCE LINES 90-97

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 20
    io = run.deterministic(["2024-01-01"], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-07-05 21:59:24.621 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2024-07-05 21:59:24.693 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda
    2024-07-05 21:59:24.864 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:149 - Fetching GFS index file: 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-07-05 21:59:25.281 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u10m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Fetching GFS for 2024-01-01 00:00:00:   4%|▍         | 1/26 [00:04<01:42,  4.12s/it]                                                                                        2024-07-05 21:59:29.397 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v10m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   4%|▍         | 1/26 [00:04<01:42,  4.12s/it]    Fetching GFS for 2024-01-01 00:00:00:   8%|▊         | 2/26 [00:05<00:55,  2.31s/it]                                                                                        2024-07-05 21:59:30.451 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: t2m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   8%|▊         | 2/26 [00:05<00:55,  2.31s/it]    Fetching GFS for 2024-01-01 00:00:00:  12%|█▏        | 3/26 [00:05<00:36,  1.60s/it]                                                                                        2024-07-05 21:59:31.204 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: sp at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  12%|█▏        | 3/26 [00:05<00:36,  1.60s/it]    Fetching GFS for 2024-01-01 00:00:00:  15%|█▌        | 4/26 [00:06<00:26,  1.19s/it]                                                                                        2024-07-05 21:59:31.772 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: msl at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  15%|█▌        | 4/26 [00:06<00:26,  1.19s/it]    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:07<00:20,  1.04it/s]                                                                                        2024-07-05 21:59:32.320 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: t850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:07<00:20,  1.04it/s]    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:07<00:15,  1.26it/s]                                                                                        2024-07-05 21:59:32.784 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u1000 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:07<00:15,  1.26it/s]    Fetching GFS for 2024-01-01 00:00:00:  27%|██▋       | 7/26 [00:07<00:12,  1.47it/s]                                                                                        2024-07-05 21:59:33.234 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v1000 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  27%|██▋       | 7/26 [00:07<00:12,  1.47it/s]    Fetching GFS for 2024-01-01 00:00:00:  31%|███       | 8/26 [00:08<00:10,  1.71it/s]                                                                                        2024-07-05 21:59:33.619 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z1000 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  31%|███       | 8/26 [00:08<00:10,  1.71it/s]    Fetching GFS for 2024-01-01 00:00:00:  35%|███▍      | 9/26 [00:08<00:08,  1.98it/s]                                                                                        2024-07-05 21:59:33.944 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  35%|███▍      | 9/26 [00:08<00:08,  1.98it/s]    Fetching GFS for 2024-01-01 00:00:00:  38%|███▊      | 10/26 [00:09<00:07,  2.11it/s]                                                                                         2024-07-05 21:59:34.346 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  38%|███▊      | 10/26 [00:09<00:07,  2.11it/s]    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:09<00:06,  2.34it/s]                                                                                         2024-07-05 21:59:34.668 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:09<00:06,  2.34it/s]    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:09<00:05,  2.64it/s]                                                                                         2024-07-05 21:59:34.935 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:09<00:05,  2.64it/s]    Fetching GFS for 2024-01-01 00:00:00:  50%|█████     | 13/26 [00:10<00:05,  2.53it/s]                                                                                         2024-07-05 21:59:35.370 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  50%|█████     | 13/26 [00:10<00:05,  2.53it/s]    Fetching GFS for 2024-01-01 00:00:00:  54%|█████▍    | 14/26 [00:10<00:04,  2.68it/s]                                                                                         2024-07-05 21:59:35.690 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  54%|█████▍    | 14/26 [00:10<00:04,  2.68it/s]    Fetching GFS for 2024-01-01 00:00:00:  58%|█████▊    | 15/26 [00:10<00:04,  2.68it/s]                                                                                         2024-07-05 21:59:36.064 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: t500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  58%|█████▊    | 15/26 [00:10<00:04,  2.68it/s]    Fetching GFS for 2024-01-01 00:00:00:  62%|██████▏   | 16/26 [00:11<00:03,  2.80it/s]                                                                                         2024-07-05 21:59:36.384 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z50 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  62%|██████▏   | 16/26 [00:11<00:03,  2.80it/s]    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:11<00:03,  2.81it/s]                                                                                         2024-07-05 21:59:36.737 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: r500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:11<00:03,  2.81it/s]    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:11<00:02,  3.04it/s]                                                                                         2024-07-05 21:59:37.004 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: r850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:11<00:02,  3.04it/s]    Fetching GFS for 2024-01-01 00:00:00:  73%|███████▎  | 19/26 [00:11<00:02,  3.21it/s]                                                                                         2024-07-05 21:59:37.275 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: tcwv at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  73%|███████▎  | 19/26 [00:11<00:02,  3.21it/s]    Fetching GFS for 2024-01-01 00:00:00:  77%|███████▋  | 20/26 [00:12<00:01,  3.12it/s]                                                                                         2024-07-05 21:59:37.616 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u100m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  77%|███████▋  | 20/26 [00:12<00:01,  3.12it/s]    Fetching GFS for 2024-01-01 00:00:00:  81%|████████  | 21/26 [00:12<00:01,  2.84it/s]                                                                                         2024-07-05 21:59:38.044 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v100m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  81%|████████  | 21/26 [00:12<00:01,  2.84it/s]    Fetching GFS for 2024-01-01 00:00:00:  85%|████████▍ | 22/26 [00:13<00:01,  2.87it/s]                                                                                         2024-07-05 21:59:38.382 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u250 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  85%|████████▍ | 22/26 [00:13<00:01,  2.87it/s]    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:13<00:01,  2.85it/s]                                                                                         2024-07-05 21:59:38.740 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v250 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:13<00:01,  2.85it/s]    Fetching GFS for 2024-01-01 00:00:00:  92%|█████████▏| 24/26 [00:13<00:00,  2.96it/s]                                                                                         2024-07-05 21:59:39.047 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z250 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  92%|█████████▏| 24/26 [00:13<00:00,  2.96it/s]    Fetching GFS for 2024-01-01 00:00:00:  96%|█████████▌| 25/26 [00:14<00:00,  2.84it/s]                                                                                         2024-07-05 21:59:39.433 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: t250 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  96%|█████████▌| 25/26 [00:14<00:00,  2.84it/s]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 26/26 [00:14<00:00,  2.91it/s]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 26/26 [00:14<00:00,  1.80it/s]
    2024-07-05 21:59:39.829 | SUCCESS  | earth2studio.run:deterministic:95 - Fetched data from GFS
    2024-07-05 21:59:40.075 | INFO     | earth2studio.run:deterministic:125 - Inference starting!
    Running inference:   0%|          | 0/21 [00:00<?, ?it/s]    Running inference:   5%|▍         | 1/21 [00:01<00:22,  1.14s/it]    Running inference:  10%|▉         | 2/21 [00:02<00:28,  1.48s/it]    Running inference:  14%|█▍        | 3/21 [00:04<00:26,  1.48s/it]    Running inference:  19%|█▉        | 4/21 [00:05<00:25,  1.49s/it]    Running inference:  24%|██▍       | 5/21 [00:07<00:24,  1.51s/it]    Running inference:  29%|██▊       | 6/21 [00:09<00:23,  1.55s/it]    Running inference:  33%|███▎      | 7/21 [00:10<00:22,  1.58s/it]    Running inference:  38%|███▊      | 8/21 [00:12<00:20,  1.61s/it]    Running inference:  43%|████▎     | 9/21 [00:13<00:19,  1.63s/it]    Running inference:  48%|████▊     | 10/21 [00:15<00:18,  1.66s/it]    Running inference:  52%|█████▏    | 11/21 [00:17<00:16,  1.68s/it]    Running inference:  57%|█████▋    | 12/21 [00:19<00:15,  1.69s/it]    Running inference:  62%|██████▏   | 13/21 [00:20<00:13,  1.69s/it]    Running inference:  67%|██████▋   | 14/21 [00:22<00:12,  1.73s/it]    Running inference:  71%|███████▏  | 15/21 [00:24<00:10,  1.76s/it]    Running inference:  76%|███████▌  | 16/21 [00:26<00:08,  1.72s/it]    Running inference:  81%|████████  | 17/21 [00:27<00:06,  1.70s/it]    Running inference:  86%|████████▌ | 18/21 [00:29<00:05,  1.71s/it]    Running inference:  90%|█████████ | 19/21 [00:31<00:03,  1.71s/it]    Running inference:  95%|█████████▌| 20/21 [00:33<00:01,  1.75s/it]    Running inference: 100%|██████████| 21/21 [00:35<00:00,  1.86s/it]    Running inference: 100%|██████████| 21/21 [00:35<00:00,  1.68s/it]
    2024-07-05 22:00:15.264 | SUCCESS  | earth2studio.run:deterministic:135 - Inference complete
    /
     ├── lat (720,) float64
     ├── lead_time (21,) timedelta64[h]
     ├── lon (1440,) float64
     ├── msl (1, 21, 720, 1440) float32
     ├── r500 (1, 21, 720, 1440) float32
     ├── r850 (1, 21, 720, 1440) float32
     ├── sp (1, 21, 720, 1440) float32
     ├── t250 (1, 21, 720, 1440) float32
     ├── t2m (1, 21, 720, 1440) float32
     ├── t500 (1, 21, 720, 1440) float32
     ├── t850 (1, 21, 720, 1440) float32
     ├── tcwv (1, 21, 720, 1440) float32
     ├── time (1,) datetime64[ns]
     ├── u1000 (1, 21, 720, 1440) float32
     ├── u100m (1, 21, 720, 1440) float32
     ├── u10m (1, 21, 720, 1440) float32
     ├── u250 (1, 21, 720, 1440) float32
     ├── u500 (1, 21, 720, 1440) float32
     ├── u850 (1, 21, 720, 1440) float32
     ├── v1000 (1, 21, 720, 1440) float32
     ├── v100m (1, 21, 720, 1440) float32
     ├── v10m (1, 21, 720, 1440) float32
     ├── v250 (1, 21, 720, 1440) float32
     ├── v500 (1, 21, 720, 1440) float32
     ├── v850 (1, 21, 720, 1440) float32
     ├── z1000 (1, 21, 720, 1440) float32
     ├── z250 (1, 21, 720, 1440) float32
     ├── z50 (1, 21, 720, 1440) float32
     ├── z500 (1, 21, 720, 1440) float32
     └── z850 (1, 21, 720, 1440) float32




.. GENERATED FROM PYTHON SOURCE LINES 98-105

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Here we will just plot the temperature at 2 meters
(t2m) 1 day into the forecast.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 107-137

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = "2024-01-01"
    variable = "t2m"
    step = 4  # lead time = 24 hrs

    plt.close("all")
    # Create a Robinson projection
    projection = ccrs.Robinson()

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    im = ax.pcolormesh(
        io["lon"][:],
        io["lat"][:],
        io[variable][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    # Set title
    ax.set_title(f"{forecast} - Lead time: {6*step}hrs")

    # Add coastlines and gridlines
    ax.coastlines()
    ax.gridlines()
    plt.savefig("outputs/01_t2m_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_01_deterministic_workflow_001.png
   :alt: 2024-01-01 - Lead time: 24hrs
   :srcset: /examples/images/sphx_glr_01_deterministic_workflow_001.png, /examples/images/sphx_glr_01_deterministic_workflow_001_2_00x.png 2.00x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /usr/local/lib/python3.10/dist-packages/cartopy/io/__init__.py:241: DownloadWarning: Downloading: https://naturalearth.s3.amazonaws.com/110m_physical/ne_110m_coastline.zip
      warnings.warn(f'Downloading: {url}', DownloadWarning)





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 8.802 seconds)


.. _sphx_glr_download_examples_01_deterministic_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01_deterministic_workflow.ipynb <01_deterministic_workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01_deterministic_workflow.py <01_deterministic_workflow.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
